ALESSIO: spostato index nella cartella views, dove è giusto che stia, e aggiunto attributo welcome-file in web.xml

--- a/project2/src/main/webapp/WEB-INF/web.xml
+++ b/project2/src/main/webapp/WEB-INF/web.xml
@@ -27,4 +27,11 @@
 			org.springframework.web.context.ContextLoaderListener
 		</listener-class>
 	</listener>
+	
+	<!-- by Alessio.. ho spostato index nelle views -->
+	<welcome-file-list>
+   		<welcome-file>/WEB-INF/views/index.jsp</welcome-file>
+	</welcome-file-list>
+	
+	
 </web-app>
