--- a/project2/src/main/webapp/WEB-INF/web.xml
+++ b/project2/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,11 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   
  
-	<display-name>Archetype Created Web Application</display-name>
+	<display-name>Spring MVC + JSP</display-name>
+	
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 
 	<servlet>
 		<servlet-name>dispatcher</servlet-name>
@@ -11,15 +15,11 @@
 		</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-
+	
 	<servlet-mapping>
 		<servlet-name>dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
-	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
